--- a/exploratory_analysis/exploratory_data_analysis_mimic-iii-v1.4_v2.ipynb
+++ b/exploratory_analysis/exploratory_data_analysis_mimic-iii-v1.4_v2.ipynb
@@ -96,9 +96,9 @@
     "# Bins data into time-blocks defined by freq (default: '1 hour') and \n",
     "# computes percentage of blocks in which items in `item_col` are recorded.\n",
     "def missing_values_in_intervals(df, item_col=None, freq='1H'):\n",
-    "    df['rounded_charttime'] = df['charttime'].dt.round(freq='H')\n",
-    "    df['rounded_window_start'] = df['window_start'].dt.round(freq='H')\n",
-    "    df['rounded_window_end'] = df['window_end'].dt.round(freq='H')\n",
+    "    df['rounded_charttime'] = df['charttime'].dt.round(freq=freq)\n",
+    "    df['rounded_window_start'] = df['window_start'].dt.round(freq=freq)\n",
+    "    df['rounded_window_end'] = df['window_end'].dt.round(freq=freq)\n",
     "    \n",
     "    measurements = defaultdict(list)\n",
     "\n",
@@ -107,14 +107,14 @@
     "        # Define hourly intervals from `starttime` to `endtime`\n",
     "        starttime = icustay_data['rounded_window_start'].min()\n",
     "        endtime = icustay_data['rounded_window_end'].max()\n",
-    "        date_range = set(pd.date_range(start=starttime, end=endtime, freq='1H'))\n",
+    "        date_range = set(pd.date_range(start=starttime, end=endtime, freq=freq))\n",
     "\n",
     "        # Check recordings of each item (e.g. vital)\n",
     "        for item_id, item_data in icustay_data.groupby(item_col):\n",
     "            timestamps = set(item_data['rounded_charttime'])\n",
     "\n",
     "            # Percentage of `date_range` covered\n",
-    "            perc_measured = len(timestamps.intersection(date_range)) / len(date_range)\n",
+    "            perc_measured = 1 - len(timestamps.intersection(date_range)) / len(date_range)\n",
     "            measurements[item_id].append(perc_measured)\n",
     "        \n",
     "    return {item:np.mean(measurements[item]) for item in measurements.keys()}"
@@ -1095,23 +1095,23 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Recorded (%)</th>\n",
-       "      <td>47.3</td>\n",
-       "      <td>11.2</td>\n",
-       "      <td>49.0</td>\n",
-       "      <td>47.6</td>\n",
-       "      <td>47.0</td>\n",
-       "      <td>47.5</td>\n",
-       "      <td>47.3</td>\n",
-       "      <td>16.8</td>\n",
+       "      <th>Missing (%)</th>\n",
+       "      <td>52.7</td>\n",
+       "      <td>88.8</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>52.4</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>52.5</td>\n",
+       "      <td>52.7</td>\n",
+       "      <td>83.2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              DiasBP  Glucose  HeartRate  MeanBP  RespRate  SpO2  SysBP  TempC\n",
-       "Recorded (%)    47.3     11.2       49.0    47.6      47.0  47.5   47.3   16.8"
+       "             DiasBP  Glucose  HeartRate  MeanBP  RespRate  SpO2  SysBP  TempC\n",
+       "Missing (%)    52.7     88.8       51.0    52.4      53.0  52.5   52.7   83.2"
       ]
      },
      "execution_count": 16,
@@ -1123,7 +1123,7 @@
     "out = missing_values_in_intervals(vitals_df, item_col='vital_id')\n",
     "out['DiasBP'] = [out['DiasBP']] # To make pandas stop complaining\n",
     "\n",
-    "pd.DataFrame(out).round(3).rename({0: 'Recorded (%)'}) * 100"
+    "pd.DataFrame(out).round(3).rename({0: 'Missing (%)'}) * 100"
    ]
   },
   {
@@ -1138,7 +1138,7 @@
     "2. Considerable variability in $\\Delta t$; most vital signals have a $\\Delta t$ within 1~2 hours, with the exception of `Glucose` and `TempC`, which are being measured highly infrequently (on average, 8.8 and 13.8 times per patient, respectively).<br><br>\n",
     "\n",
     "1. Missing value percentage is very high (>50\\% for all vital signals considered).\n",
-    "    2. Temperature (`TempC`) and `Glucose` measurements are the most rare (as found previously), only being recorded in 16.7\\% and 11.1\\% of hours in the 72 hour time-frame considered."
+    "    2. Temperature (`TempC`) and `Glucose` measurements are the most rare (as found previously), only being recorded in 16.7\\% (83.2\\% missing) and 11.1\\% (88.8\\% missing) of hours in the 72 hour time-frame considered."
    ]
   },
   {
@@ -1572,13 +1572,233 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b031cfd0",
+   "metadata": {},
+   "source": [
+    "#### Missing values (in hourly windows)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "b618d932",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Missing 1H (%)</th>\n",
+       "      <th>4H (%)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>ALAT</th>\n",
+       "      <td>97.2</td>\n",
+       "      <td>89.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ANION GAP</th>\n",
+       "      <td>94.2</td>\n",
+       "      <td>78.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ASAT</th>\n",
+       "      <td>97.2</td>\n",
+       "      <td>89.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BANDS</th>\n",
+       "      <td>98.2</td>\n",
+       "      <td>93.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BICARBONATE</th>\n",
+       "      <td>94.1</td>\n",
+       "      <td>77.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BILIRUBIN</th>\n",
+       "      <td>97.1</td>\n",
+       "      <td>89.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BUN</th>\n",
+       "      <td>94.0</td>\n",
+       "      <td>77.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BaseExcess</th>\n",
+       "      <td>93.2</td>\n",
+       "      <td>80.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CALCIUM</th>\n",
+       "      <td>95.1</td>\n",
+       "      <td>81.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CHLORIDE</th>\n",
+       "      <td>93.6</td>\n",
+       "      <td>77.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CREATININE</th>\n",
+       "      <td>94.1</td>\n",
+       "      <td>77.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GLUCOSE</th>\n",
+       "      <td>93.3</td>\n",
+       "      <td>76.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HEMOGLOBIN</th>\n",
+       "      <td>94.0</td>\n",
+       "      <td>79.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LACTATE</th>\n",
+       "      <td>95.0</td>\n",
+       "      <td>85.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MAGNESIUM</th>\n",
+       "      <td>94.7</td>\n",
+       "      <td>80.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PACO2</th>\n",
+       "      <td>93.2</td>\n",
+       "      <td>80.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PAO2</th>\n",
+       "      <td>93.2</td>\n",
+       "      <td>80.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PH</th>\n",
+       "      <td>93.2</td>\n",
+       "      <td>79.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PLATELET</th>\n",
+       "      <td>94.6</td>\n",
+       "      <td>80.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>POTASSIUM</th>\n",
+       "      <td>92.8</td>\n",
+       "      <td>74.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SODIUM</th>\n",
+       "      <td>93.4</td>\n",
+       "      <td>76.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>WBC</th>\n",
+       "      <td>94.7</td>\n",
+       "      <td>80.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ION_CALCIUM</th>\n",
+       "      <td>94.8</td>\n",
+       "      <td>84.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PT</th>\n",
+       "      <td>95.5</td>\n",
+       "      <td>83.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PTT</th>\n",
+       "      <td>95.3</td>\n",
+       "      <td>82.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ALBUMIN</th>\n",
+       "      <td>97.9</td>\n",
+       "      <td>92.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Missing 1H (%)  4H (%)\n",
+       "ALAT                   97.2    89.3\n",
+       "ANION GAP              94.2    78.1\n",
+       "ASAT                   97.2    89.3\n",
+       "BANDS                  98.2    93.2\n",
+       "BICARBONATE            94.1    77.8\n",
+       "BILIRUBIN              97.1    89.1\n",
+       "BUN                    94.0    77.5\n",
+       "BaseExcess             93.2    80.0\n",
+       "CALCIUM                95.1    81.4\n",
+       "CHLORIDE               93.6    77.1\n",
+       "CREATININE             94.1    77.7\n",
+       "GLUCOSE                93.3    76.3\n",
+       "HEMOGLOBIN             94.0    79.1\n",
+       "LACTATE                95.0    85.3\n",
+       "MAGNESIUM              94.7    80.0\n",
+       "PACO2                  93.2    80.0\n",
+       "PAO2                   93.2    80.0\n",
+       "PH                     93.2    79.8\n",
+       "PLATELET               94.6    80.3\n",
+       "POTASSIUM              92.8    74.7\n",
+       "SODIUM                 93.4    76.6\n",
+       "WBC                    94.7    80.5\n",
+       "ION_CALCIUM            94.8    84.2\n",
+       "PT                     95.5    83.6\n",
+       "PTT                    95.3    82.8\n",
+       "ALBUMIN                97.9    92.2"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Binning with 1 hour intervals\n",
+    "out1 = missing_values_in_intervals(lab_df, item_col='lab_id', freq='1H')\n",
+    "\n",
+    "# Binning with 4 hour intervals\n",
+    "out4 = missing_values_in_intervals(lab_df, item_col='lab_id', freq='4H')\n",
+    "\n",
+    "pd.DataFrame({'Missing 1H (%)': out1, '4H (%)': out4}).round(3) * 100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e8cfdb43",
    "metadata": {},
    "source": [
     "*Remarks:*\n",
     "\n",
     "1. Some lab values are more frequently measured (e.g. `Potassium`, `Sodium`, `Creatinine`) than others (`Albumin`, `ASAT`, `Bands`, `Bilirubin`)\n",
-    "1. Considerable spread in measurement values and measurement deltas ($\\Delta t$); frequently beyond a day for some tests (e.g. thrombocytes/platelets)."
+    "2. Considerable spread in measurement values and measurement deltas ($\\Delta t$); frequently beyond a day for some tests (e.g. thrombocytes/platelets).\n",
+    "3. Binning using fixed 1-hour to 4-hour bins is not desirable as we will obtain a significant number of missing values."
    ]
   },
   {
@@ -1594,7 +1814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "24cc5aa7",
    "metadata": {},
    "outputs": [
@@ -1711,7 +1931,7 @@
        "4  mcg/kg/min           81.7  norepinephrine  0.200979  16.419956  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1731,7 +1951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "74694964",
    "metadata": {},
    "outputs": [
@@ -1754,7 +1974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "f5ecc17a",
    "metadata": {},
    "outputs": [
@@ -1785,7 +2005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "bbc9f75b",
    "metadata": {},
    "outputs": [
@@ -1884,7 +2104,7 @@
        "4  0.068966  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1904,7 +2124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "261db2e6",
    "metadata": {},
    "outputs": [
@@ -1927,7 +2147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "id": "c66548c2",
    "metadata": {},
    "outputs": [
@@ -1975,7 +2195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "5abdd66f",
    "metadata": {},
    "outputs": [
@@ -2173,7 +2393,7 @@
        "4        250.0             ml   FinishedRunning  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2193,7 +2413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "id": "06defcb7",
    "metadata": {},
    "outputs": [
@@ -2327,7 +2547,7 @@
        "16-Pre Admission                    1925.642857         43"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2348,7 +2568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "id": "bfd484ff",
    "metadata": {},
    "outputs": [
@@ -2379,7 +2599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "id": "f65468a2",
    "metadata": {},
    "outputs": [
@@ -2508,7 +2728,7 @@
        "4        ml   NaN     NaN  2164-10-24 12:08:00  8110354  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2529,7 +2749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "id": "e7a0c9d1",
    "metadata": {},
    "outputs": [
@@ -2570,7 +2790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "id": "493841b5",
    "metadata": {},
    "outputs": [
@@ -2656,7 +2876,7 @@
        "4       10044   124073      270154 2152-10-03 11:00:00    200"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2677,7 +2897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "id": "0cd6bad7",
    "metadata": {},
    "outputs": [
@@ -2711,7 +2931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "id": "2516adc4",
    "metadata": {},
    "outputs": [
