drop row indices from files

--- a/preprocessing/MIMIC-III_preprocessing_attention_v1.ipynb
+++ b/preprocessing/MIMIC-III_preprocessing_attention_v1.ipynb
@@ -2885,14 +2885,14 @@
    "outputs": [],
    "source": [
     "# Save training, validation and test sets\n",
-    "train_df.to_csv(OUTPUT_DIR + 'mimic-iii_train.csv')\n",
-    "valid_df.to_csv(OUTPUT_DIR + 'mimic-iii_valid.csv')\n",
-    "test_df.to_csv(OUTPUT_DIR + 'mimic-iii_test.csv')\n",
+    "train_df.to_csv(OUTPUT_DIR + 'mimic-iii_train.csv', index=False)\n",
+    "valid_df.to_csv(OUTPUT_DIR + 'mimic-iii_valid.csv', index=False)\n",
+    "test_df.to_csv(OUTPUT_DIR + 'mimic-iii_test.csv', index=False)\n",
     "\n",
     "# Save demographics\n",
-    "train_demo_df.to_csv(OUTPUT_DIR + 'mimic-iii_train_demographics.csv')\n",
-    "valid_demo_df.to_csv(OUTPUT_DIR + 'mimic-iii_valid_demographics.csv')\n",
-    "test_demo_df.to_csv(OUTPUT_DIR + 'mimic-iii_test_demographics.csv')"
+    "train_demo_df.to_csv(OUTPUT_DIR + 'mimic-iii_train_demographics.csv', index=False)\n",
+    "valid_demo_df.to_csv(OUTPUT_DIR + 'mimic-iii_valid_demographics.csv', index=False)\n",
+    "test_demo_df.to_csv(OUTPUT_DIR + 'mimic-iii_test_demographics.csv', index=False)"
    ]
   },
   {
