Simplified naming scheme

--- a/preprocessing/AmsterdamUMCdb_to_MIMIC-III_format.ipynb
+++ b/preprocessing/AmsterdamUMCdb_to_MIMIC-III_format.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "b2081bae",
    "metadata": {},
    "outputs": [],
@@ -56,11 +56,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "admission_df = pd.read_csv(DATA_DIR + 'admissions.csv', usecols=['admissionid', 'admittedat'])\n",
+    "admission_df = pd.read_csv(DATA_DIR + 'admissions.csv', usecols=['admissionid', 'patientid', 'destination'])\n",
     "print('Num admissions:', len(admission_df.index))\n",
     "\n",
     "# Check for DUPLICATES!\n",
-    "print(\"Number of duplicated Metavision admissions: %d\" % sum(admission_df.duplicated('admissionid', keep=False) == True))\n",
+    "print(\"Number of duplicated Metavision admissions: %d\" % sum(admission_df.duplicated('patientid', keep=False) == True))\n",
     "\n",
     "# List of all admission IDs\n",
     "admission_list = admission_df['admissionid']\n",
@@ -99,32 +99,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Admission times (relative to first admission in ms)\n",
-    "admissiondat_df = admission_df[['admissionid', 'admittedat']]\n",
+    "# Rename admissions_df\n",
+    "admission_df.rename({'admissionid': 'icustay_id',\n",
+    "                     'patientid': 'subject_id',\n",
+    "                     'destination': 'hospital_expire_flag'})\n",
+    "\n",
+    "# In-hospital mortality (1 if deceased; if survived)\n",
+    "admission_df['hospital_expire_flag'] = (admission_df['hospital_expire_flag'] == 'Overleden')\n",
     "\n",
     "# Suspected Infection Time (start/continuation of antibiotics excl. prophylactic regimens)\n",
     "antibiotics_df = pd.read_csv('drugitems.csv', usecols=['admissionid', 'ordercategoryid', 'start'])\n",
     "antibiotics_df = antibiotics_df[antibiotics_df['ordercategoryid'].isin(antibiotics_ordercategoryids)] # TODO: identify preventive/prophylactic treatments?\n",
-    "suspected_infection_df = antibiotics_df[['admissionid', 'start']].groupby('admissionid').first()      # First Anti-biotics in admission!\n",
-    "suspected_infection_df.rename({'start': 'suspected_infection_time_poe'}, inplace=True)                # Rename 'start' to 'suspected_infection_time_poe'\n",
+    "suspected_infection_df = antibiotics_df[['admissionid', 'start']].groupby('admissionid').first()      # First antibiotic administration!\n",
+    "suspected_infection_df.rename({'admissionid': 'icustay_id',\n",
+    "                               'start': 'suspected_infection_time_poe'}, inplace=True)                # Rename columns to MIMIC-III namespace\n",
     "del antibiotics_df\n",
     "\n",
-    "# In-hospital mortality\n",
-    "hospital_expire_df = (admission_df['destination'] == 'Overleden').to_frame('hospital_expire_flag')\n",
-    "\n",
     "# Left-join into one DataFrame!\n",
-    "cohort_df = admissiondat_df.join(suspected_infection_df, how='left', on='admissionid')\n",
-    "cohort_df = cohort_df.join(hospital_expire_df, how='left', on='admissionid')\n",
+    "cohort_df = admission_df.join(suspected_infection_df, how='left', on='icustay_id')\n",
     "\n",
-    "# Convert infection time to timestamp since admission (starttime is now for all admissions for simplicity)\n",
-    "cohort_df['suspected_infection_time_poe'] = pd.to_timedelta(cohort_df['suspected_infection_time_poe'] - cohort_df['admittedat'], unit='ms') + pd.Timestamp('today')\n",
+    "# Convert infection time to timestamp since admission (starttime of first admission is today for simplicity)\n",
+    "cohort_df['suspected_infection_time_poe'] = pd.to_timedelta(cohort_df['suspected_infection_time_poe'], unit='ms') + pd.Timestamp('today')\n",
     "\n",
     "# Define window_start and window_end times\n",
     "cohort_df['window_start'] = cohort_df['suspected_infection_time_poe'] - pd.Timedelta(days=1)\n",
     "cohort_df['window_end'] = cohort_df['suspected_infection_time_poe'] + pd.Timedelta(days=2)\n",
-    "\n",
-    "# Rename admissionid to icustay_id columns\n",
-    "cohort_df.rename({'admissionid': 'icustay_id'}, inplace=True)\n",
     "\n",
     "print('Done!')"
    ]
@@ -270,7 +269,7 @@
    "id": "6801d460-8220-4ef0-8c4e-7812750222ae",
    "metadata": {},
    "source": [
-    "#### SIRS"
+    "#### SIRS (on-admission)"
    ]
   },
   {
@@ -345,7 +344,7 @@
    "outputs": [],
    "source": [
     "# Item names\n",
-    "vital_results = {\n",
+    "vital_itemids = {                                            ### For details: https://github.com/AmsterdamUMC/AmsterdamUMCdb/tree/master/amsterdamumcdb/sql/common\n",
     "    'HeartRate': [6640],                                     # 'Hartfrequentie'\n",
     "    'SysBP':     [6641, 6678, 8841],                         # 'ABP systolisch', 'Niet invasieve bloeddruk systolisch', 'ABP systolisch II', \n",
     "    'DiasBP':    [6643, 6680, 8842],                         # 'ABP diastolisch', 'Niet invasieve bloeddruk diastolisch', 'ABP diastolisch II'\n",
@@ -353,7 +352,7 @@
     "    'Glucose':   [6833],                                     # 'Glucose Bloed'\n",
     "    'SpO2':      [12311],                                    # 'O2-Saturatie (bloed)'\n",
     "    'TempC':     [8658, 8659, 8662, 13058, 13059,            # 'Temp Bloed', 'Temperatuur Perifeer 2', 'Temperatuur Perifeer 1', 'Temp Rectaal', 'Temp Lies',\n",
-    "                  13060, 13061, 13062, 13063, 13952, 16110], # 'Temp Axillair', 'Temp Oraal', 'Temp Oor', 'Temp Huid', 'Temp Blaas', 'Temp Oesophagus' \n",
+    "                 13060, 13061, 13062, 13063, 13952, 16110],  # 'Temp Axillair', 'Temp Oraal', 'Temp Oor', 'Temp Huid', 'Temp Blaas', 'Temp Oesophagus' \n",
     "    'RespRate':  [8874, 8873, 9654, 7726, 12266]             # 'Ademfrequentie Monitor', 'Ademfrequentie Evita', 'Ademfreq.'\n",
     "}"
    ]
@@ -365,15 +364,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The gist of the measurements: Numeric items!\n",
+    "# Load numericitems.csv and convert to MIMIC-III namespace\n",
     "numericitems_df = pd.read_csv('numericitems.csv', usecols=['admissionid', 'measuredat', 'itemid', 'value'])\n",
+    "numericitems_df.rename(columns={'admissionid': 'icustay_id', \n",
+    "                                'measuredat': 'charttime',\n",
+    "                                'itemid': 'item_id',\n",
+    "                                'value': 'valuenum'}, inplace=True)\n",
     "\n",
     "# Process vitals one-by-one\n",
     "vital_dfs = []\n",
-    "for vital_id, key in tqdm(lab_results.items()):\n",
-    "    condition = numericitem_df[numericitem_df['itemid'].isin(key)]\n",
-    "    vital_df = numericitems_df[condition][['admissionid', 'measuredat', 'value']]\n",
-    "    vital_df['vital_id'] = vital_id\n",
+    "for itemid, key in tqdm(vital_itemids.items()):\n",
+    "    condition = numericitem_df[numericitem_df['item_id'].isin(key)]\n",
+    "    vital_df = numericitems_df[condition][['icustay_id', 'charttime', 'valuenum']]\n",
+    "    vital_df['vital_id'] = itemid\n",
     "    \n",
     "    vital_dfs.append(vital_df)\n",
     "    \n",
@@ -397,9 +400,7 @@
    "outputs": [],
    "source": [
     "# vitals_cohort.csv -> icustay_id, charttime, vital_id, valuenum\n",
-    "vitals_df.rename(columns={'admissionid': 'icustay_id', \n",
-    "                          'measuredat': 'charttime', # to MIMIC namespace\n",
-    "                          'value': 'valuenum'}).to_csv(OUTPUT_DIR + 'vitals_cohort.csv')\n",
+    "vitals_df.to_csv(OUTPUT_DIR + 'vitals_cohort.csv')\n",
     "del vitals_df\n",
     "print('Done!')"
    ]
@@ -464,8 +465,8 @@
     "# Find lab results one-by-one\n",
     "lab_dfs = []\n",
     "for lab_id, keys in tqdm(lab_results.items()):\n",
-    "    condition = numericitem_df[numericitem_df['itemid'].isin(keys)]\n",
-    "    lab_df = numericitems_df[condition][['admissionid', 'measuredat', 'value']]\n",
+    "    condition = numericitem_df[numericitem_df['item_id'].isin(keys)]\n",
+    "    lab_df = numericitems_df[condition][['icustay_id', 'charttime', 'valuenum']]\n",
     "    lab_df['lab_id'] = lab_id\n",
     "    \n",
     "    lab_dfs.append(lab_df)\n",
@@ -490,9 +491,7 @@
    "outputs": [],
    "source": [
     "# labs_cohort.csv -> icustay_id, charttime, lab_id, valuenum\n",
-    "lab_df = lab_df.rename(columns={'admissionid': 'icustay_id', \n",
-    "                                'measuredat': 'charttime', # to MIMIC namespace\n",
-    "                                'value': 'valuenum'}).to_csv(OUTPUT_DIR + 'labs_cohort.csv')\n",
+    "lab_df = lab_df.to_csv(OUTPUT_DIR + 'labs_cohort.csv')\n",
     "del lab_df\n",
     "print('Done!')"
    ]
@@ -564,9 +563,7 @@
    "outputs": [],
    "source": [
     "# urineoutput_cohort.csv -> icustay_id, charttime, valuenum\n",
-    "urine_df = urine_df.rename(columns={'admissionid': 'icustay_id', \n",
-    "                                    'measuredat': 'charttime',\n",
-    "                                    'value': 'valuenum'}).to_csv(OUTPUT_DIR + 'urineoutput_cohort.csv')\n",
+    "urine_df = urine_df.to_csv(OUTPUT_DIR + 'urineoutput_cohort.csv')\n",
     "del urine_df\n",
     "print('Done!')"
    ]
