--- a/preprocessing/AmsterdamUMCdb_to_MIMIC-III_format.ipynb
+++ b/preprocessing/AmsterdamUMCdb_to_MIMIC-III_format.ipynb
@@ -416,13 +416,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "id": "7434acb7-571d-42b6-8741-dd5a1d35c1c7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>itemid</th>\n",
+       "      <th>item</th>\n",
+       "      <th>item_en</th>\n",
+       "      <th>vocabulary_id</th>\n",
+       "      <th>vocabulary_concept_code</th>\n",
+       "      <th>vocabulary_concept_name</th>\n",
+       "      <th>abbreviation</th>\n",
+       "      <th>categoryid</th>\n",
+       "      <th>category</th>\n",
+       "      <th>category_en</th>\n",
+       "      <th>...</th>\n",
+       "      <th>unitid</th>\n",
+       "      <th>unit</th>\n",
+       "      <th>ucum_code</th>\n",
+       "      <th>low_normal_value</th>\n",
+       "      <th>high_normal_value</th>\n",
+       "      <th>expected_min_value</th>\n",
+       "      <th>expected_max_value</th>\n",
+       "      <th>table</th>\n",
+       "      <th>count</th>\n",
+       "      <th>count_validated</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>167</th>\n",
+       "      <td>6846</td>\n",
+       "      <td>PCO2</td>\n",
+       "      <td>partial pressure of carbon dioxide in blood</td>\n",
+       "      <td>LOINC</td>\n",
+       "      <td>11557-6</td>\n",
+       "      <td>Carbon dioxide [Partial pressure] in Blood</td>\n",
+       "      <td>PCO2</td>\n",
+       "      <td>372</td>\n",
+       "      <td>LAB ASTRUPS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>173.0</td>\n",
+       "      <td>mmHg</td>\n",
+       "      <td>mm[Hg]</td>\n",
+       "      <td>36</td>\n",
+       "      <td>44</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>numericitems</td>\n",
+       "      <td>25348</td>\n",
+       "      <td>25348.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8985</th>\n",
+       "      <td>21213</td>\n",
+       "      <td>PCO2 (bloed) - kPa</td>\n",
+       "      <td>partial pressure of carbon dioxide in blood</td>\n",
+       "      <td>LOINC</td>\n",
+       "      <td>11557-6</td>\n",
+       "      <td>Carbon dioxide [Partial pressure] in Blood</td>\n",
+       "      <td>PCO2 (bloed) - kPa</td>\n",
+       "      <td>491</td>\n",
+       "      <td>LAB-Astr-bloed</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>152.0</td>\n",
+       "      <td>kPa</td>\n",
+       "      <td>kPa</td>\n",
+       "      <td>4,7</td>\n",
+       "      <td>6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>numericitems</td>\n",
+       "      <td>9464</td>\n",
+       "      <td>9464.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      itemid                item                                      item_en  \\\n",
+       "167     6846                PCO2  partial pressure of carbon dioxide in blood   \n",
+       "8985   21213  PCO2 (bloed) - kPa  partial pressure of carbon dioxide in blood   \n",
+       "\n",
+       "     vocabulary_id vocabulary_concept_code  \\\n",
+       "167          LOINC                 11557-6   \n",
+       "8985         LOINC                 11557-6   \n",
+       "\n",
+       "                         vocabulary_concept_name        abbreviation  \\\n",
+       "167   Carbon dioxide [Partial pressure] in Blood                PCO2   \n",
+       "8985  Carbon dioxide [Partial pressure] in Blood  PCO2 (bloed) - kPa   \n",
+       "\n",
+       "      categoryid        category category_en  ...  unitid  unit  ucum_code  \\\n",
+       "167          372     LAB ASTRUPS         NaN  ...   173.0  mmHg     mm[Hg]   \n",
+       "8985         491  LAB-Astr-bloed         NaN  ...   152.0   kPa        kPa   \n",
+       "\n",
+       "      low_normal_value high_normal_value  expected_min_value  \\\n",
+       "167                 36                44                 NaN   \n",
+       "8985               4,7                 6                 NaN   \n",
+       "\n",
+       "     expected_max_value         table  count count_validated  \n",
+       "167                 NaN  numericitems  25348         25348.0  \n",
+       "8985                NaN  numericitems   9464          9464.0  \n",
+       "\n",
+       "[2 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# dct = pd.read_csv('../data/amsterdam-umc-db/dictionary.csv')\n",
-    "# dct[ (dct['item'].str.contains('Magnesium'))]"
+    "dct = pd.read_csv('../data/amsterdam-umc-db/dictionary.csv')\n",
+    "dct[ (dct['item'].str.contains('PCO2'))]"
    ]
   },
   {
@@ -436,12 +567,12 @@
     "    'Calcium':     [9933],                           # 'Calcium', 'Calcium totaal (bloed)'\n",
     "    'IonCalcium':  [],\n",
     "    'ASAT':        [11990],                          # 'ASAT (bloed)'\n",
-    "    'PTT':         [17982],                          # 'APTT (bloed)' --- TODO: Apply approx. conversion rate: https://www.webmd.com/a-to-z-guides/partial-thromboplastin-time-test\n",
+    "    'PTT':         [17982],                          # 'APTT (bloed)'\n",
     "    'Potassium':   [9927],                           # 'Kalium (bloed)'\n",
     "    'PT':          [],\n",
     "    'Platelet':    [6797, 9964, 10409, 14252, 7369], # 'Thrombocyten', \"Thrombo's (bloed)\", \"Thrombo's citr. bloed (bloed)\", 'Thrombo CD61 (bloed)'\n",
     "    'AnionGap':    [9559],                           # 'Anion-Gap (bloed)'\n",
-    "    'PaO2':        [6846, 21213],                    # 'PCO2', 'PCO2 (bloed) - kPa # TODO: NEED CONVERSION\n",
+    "    'PaO2':        [7433, 9996, 21214],              # 'PaO2', 'PaO2 (bloed)', 'PaO2 (bloed) - kPa'\n",
     "    'ALAT':        [6800, 11978],                    # 'ALAT', 'ALAT (bloed)'\n",
     "    'WBC':         [11678, 18553, 18554,             # 'Tot.WBC*10^8 (overig)', 'Tot. WBC*10^8 (HPC-A Allogeen)', 'Tot. WBC*10^8 (HPC-A Autoloog)'\n",
     "                    18557, 6779, 9965],              # 'Tot. WBC*10^8 (Tcellen concentraat)', 'Leucocyten 10^9/l', \"Leuco's (bloed) 10^9/l\"\n",
@@ -450,7 +581,7 @@
     "    'Chloride':    [],\n",
     "    'Magnesium':   [9952],                           # 'Magnesium (bloed)'\n",
     "    'Lactate':     [10053],                          # 'Lactaat (bloed)'\n",
-    "    'PaCO2':       [21213],                          # 'PCO2 (bloed) - kPa' TODO: CONVERSION\n",
+    "    'PaCO2':       [6846, 9990, 21213],              # 'PCO2', 'PCO2 (bloed)', 'PCO2 (bloed) - kPa'\n",
     "    'Glucose':     [6833, 9947],                     # 'Glucose Bloed', 'Glucose (bloed)'\n",
     "    'Creatinine':  [9941, 14216],                    # 'Kreatinine (bloed)', 'KREAT enzym. (bloed)'\n",
     "    'Bicarbinate': [],\n",
@@ -468,6 +599,11 @@
     "    condition = numericitem_df[numericitem_df['item_id'].isin(keys)]\n",
     "    lab_df = numericitems_df[condition][['icustay_id', 'charttime', 'valuenum']]\n",
     "    lab_df['lab_id'] = lab_id\n",
+    "    \n",
+    "    # Unit conversions\n",
+    "    lab_df[lab_df['item_id'] == 17982] *= 2           # APPT -> PTT: https://www.webmd.com/a-to-z-guides/partial-thromboplastin-time-test\n",
+    "    lab_df[lab_df['item_id'] == 21214] *= 7.50061683  # kPa -> mmHg; https://github.com/AmsterdamUMC/AmsterdamUMCdb/blob/master/amsterdamumcdb/sql/common/pO2_FiO2_estimated.sql\n",
+    "    lab_df[lab_df['item_id'] == 21213] *= 7.50061683  # kPa -> mmHg; \"\n",
     "    \n",
     "    lab_dfs.append(lab_df)\n",
     "    \n",
@@ -574,7 +710,9 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## FiO2"
+    "## FiO2\n",
+    "\n",
+    "**TODO:**"
    ]
   },
   {
@@ -611,7 +749,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get list items corresponding to O2\n",
+    "# Get listitems corresponding to O2\n",
     "listitems_df = pd.read_csv('listitems.csv', usecols=['admissionid', 'measuredat'])\n",
     "listitems_df = listitems_df[listitems_df['itemid'] == 8189] # Toedieningsweg (Oxygen device)\n",
     "\n",
@@ -619,7 +757,7 @@
     "fio2_non_vent_df = numericitems_df[numericitems_df['itemid'].isin(fio2_resp_settings + fio2_item_ids)]\n",
     "\n",
     "# Left-join tables\n",
-    "fio2_df = fio2_non_vent_df.join(listitems_df, on=['admissionid', 'measuredat'])\n"
+    "fio2_df = fio2_non_vent_df.join(listitems_df, on=['admissionid', 'measuredat'])"
    ]
   },
   {
