Rename state space features to x*

--- a/preprocessing/MIMIC-III_preprocessing_roggeveen_v5.ipynb
+++ b/preprocessing/MIMIC-III_preprocessing_roggeveen_v5.ipynb
@@ -4233,6 +4233,82 @@
   },
   {
    "cell_type": "markdown",
+   "id": "235207c5-a906-4bf0-881b-413a5878614c",
+   "metadata": {},
+   "source": [
+    "## Rename Columns\n",
+    "\n",
+    "In the source code we may wish to refer to the list of features without defining the names of the features each time, i.e. `['heart_rate', 'albumin', 'leu', 'resp_rate', 'fio2', ...]` etc. Much easier is to simply refer to the columns as `x0` to `x49` which we can create procedurally. Below we will define a mapping from state-space features to their `x*`equivalents;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "581b334f-f869-42ea-b041-28522337de58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "STATE_SPACE_COLUMNS = ['max_vaso', 'total_iv_fluid', 'sirs_score', 'sofa_score', 'weight', 'ventilator', 'height', 'age', 'gender',\n",
+    "                       'heart_rate', 'temp', 'mean_bp', 'dias_bp', 'sys_bp', 'resp_rate', 'spo2', 'natrium', 'chloride', 'kalium', 'trombo', \n",
+    "                       'leu', 'anion_gap', 'aptt', 'art_ph', 'asat', 'alat', 'bicarbonaat', 'art_be', 'ion_ca', 'lactate', 'paco2', 'pao2', \n",
+    "                       'fio2', 'sirs_bands', 'shock_index', 'hb', 'bilirubin', 'creatinine', 'inr', 'ureum', 'albumin', 'magnesium', 'calcium', \n",
+    "                       'pf_ratio', 'glucose', 'running_total_urine_output', 'total_urine_output', 'running_total_iv_fluid']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "4069132a-63d3-479e-a685-eee1343f9101",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Uncomment for debugging\n",
+    "# data_train_df = pd.read_csv(OUTPUT_DIR + 'mimic-iii_train.csv')\n",
+    "# data_valid_df = pd.read_csv(OUTPUT_DIR + 'mimic-iii_valid.csv')\n",
+    "# data_test_df = pd.read_csv(OUTPUT_DIR + 'mimic-iii_test.csv')\n",
+    "\n",
+    "# Create x* name for each column\n",
+    "new_state_space_columns = {feat:'x%s' % i for i, feat in enumerate(STATE_SPACE_COLUMNS)}\n",
+    "\n",
+    "# Replace 'icustay_id' by 'episode'\n",
+    "new_state_space_columns['icustay_id'] = 'episode'\n",
+    "\n",
+    "# Rename columns\n",
+    "data_train_df = data_train_df.rename(columns=new_state_space_columns)\n",
+    "data_valid_df = data_valid_df.rename(columns=new_state_space_columns)\n",
+    "data_test_df = data_test_df.rename(columns=new_state_space_columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "ce03d4e5-31e1-4304-b04a-e818f8d0c52d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['episode', 'timestep', 'x0', 'max_vaso_shifted', 'x1',\n",
+       "       'total_iv_fluid_shifted', 'reward', 'x2', 'x3', 'x4', 'x5', 'x6', 'x7',\n",
+       "       'x8', 'x9', 'x10', 'x11', 'x12', 'x13', 'x14', 'x15', 'x16', 'x17',\n",
+       "       'x18', 'x19', 'x20', 'x21', 'x22', 'x23', 'x24', 'x25', 'x26', 'x27',\n",
+       "       'x28', 'x29', 'x30', 'x31', 'x32', 'x33', 'x34', 'x35', 'x36', 'x37',\n",
+       "       'x38', 'x39', 'x40', 'x41', 'x42', 'x43', 'x44', 'x45', 'x46', 'x47',\n",
+       "       'action', 'state_sirs'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_train_df.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b0c2590f-52b4-4221-b0a1-d7991300f69a",
    "metadata": {},
    "source": [
@@ -4241,7 +4317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 25,
    "id": "b7145e3d",
    "metadata": {},
    "outputs": [
