Added export of state space features

--- a/preprocessing/MIMIC-III_preprocessing_roggeveen_v5.ipynb
+++ b/preprocessing/MIMIC-III_preprocessing_roggeveen_v5.ipynb
@@ -4243,7 +4243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "581b334f-f869-42ea-b041-28522337de58",
    "metadata": {},
    "outputs": [],
@@ -4252,7 +4252,17 @@
     "                       'heart_rate', 'temp', 'mean_bp', 'dias_bp', 'sys_bp', 'resp_rate', 'spo2', 'natrium', 'chloride', 'kalium', 'trombo', \n",
     "                       'leu', 'anion_gap', 'aptt', 'art_ph', 'asat', 'alat', 'bicarbonaat', 'art_be', 'ion_ca', 'lactate', 'paco2', 'pao2', \n",
     "                       'fio2', 'sirs_bands', 'shock_index', 'hb', 'bilirubin', 'creatinine', 'inr', 'ureum', 'albumin', 'magnesium', 'calcium', \n",
-    "                       'pf_ratio', 'glucose', 'running_total_urine_output', 'total_urine_output', 'running_total_iv_fluid']"
+    "                       'pf_ratio', 'glucose', 'running_total_urine_output', 'total_urine_output', 'running_total_iv_fluid']\n",
+    "\n",
+    "# Check if all features in `data_train_df`\n",
+    "for col in  STATE_SPACE_COLUMNS:\n",
+    "    if col not in data_train_df:\n",
+    "        raise Exception('%s not in data_train_df' % col)\n",
+    "\n",
+    "# Write out file for later reference\n",
+    "with open(OUTPUT_DIR + 'state_space_features.txt', 'w') as f:\n",
+    "    for col in STATE_SPACE_COLUMNS:\n",
+    "        f.write(\"%s\\n\" % col)"
    ]
   },
   {
