Finalized non-binning transformer preprocessing

--- a/preprocessing/MIMIC-III_preprocessing_roggeveen_v5.ipynb
+++ b/preprocessing/MIMIC-III_preprocessing_roggeveen_v5.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b2081bae",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ec795852-dddc-4b6d-be2b-275005153e56",
    "metadata": {},
    "outputs": [],
@@ -344,7 +344,7 @@
    ],
    "source": [
     "icustay_ids = cohort_df['icustay_id'].values\n",
-    "print('Total number of admissions: %s' % icustay_ids.size)"
+    "print('Total number of admissions: %s' % icustay_ids.size) # few are dropped still"
    ]
   },
   {
