Sort datasets on episode and timesteps

--- a/preprocessing/MIMIC-III_preprocessing_roggeveen_v5.ipynb
+++ b/preprocessing/MIMIC-III_preprocessing_roggeveen_v5.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b2081bae",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ec795852-dddc-4b6d-be2b-275005153e56",
    "metadata": {},
    "outputs": [],
@@ -4319,6 +4319,31 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b4c2345f-fa7c-4f0c-a608-cd2d8c7b7fd7",
+   "metadata": {},
+   "source": [
+    "## Sort Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "48caec95-ec65-4da4-b279-76a912d10658",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Uncomment for debugging\n",
+    "# data_train_df = pd.read_csv(OUTPUT_DIR + 'mimic-iii_train.csv')\n",
+    "# data_valid_df = pd.read_csv(OUTPUT_DIR + 'mimic-iii_valid.csv')\n",
+    "# data_test_df = pd.read_csv(OUTPUT_DIR + 'mimic-iii_test.csv')\n",
+    "\n",
+    "data_train_df = data_train_df.sort_values(['episode', 'timestep'])\n",
+    "data_valid_df = data_valid_df.sort_values(['episode', 'timestep'])\n",
+    "data_test_df = data_test_df.sort_values(['episode', 'timestep'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b0c2590f-52b4-4221-b0a1-d7991300f69a",
    "metadata": {},
    "source": [
@@ -4327,7 +4352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "b7145e3d",
    "metadata": {},
    "outputs": [
