Removed output example and added docs

--- a/data/mimic-iii/convert_cv_to_mv.ipynb
+++ b/data/mimic-iii/convert_cv_to_mv.ipynb
@@ -444,146 +444,9 @@
    "metadata": {},
    "source": [
     "---\n",
-    "### Vasopressors"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "f4776e1f-2b4a-43a5-8fbd-cba01dab1701",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Vasopressors (MV)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>icustay_id</th>\n",
-       "      <th>starttime</th>\n",
-       "      <th>endtime</th>\n",
-       "      <th>mcgkgmin</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>200063</td>\n",
-       "      <td>2141-03-21 11:00:00</td>\n",
-       "      <td>2141-03-21 14:14:00</td>\n",
-       "      <td>0.312876</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>200063</td>\n",
-       "      <td>2141-03-21 14:14:00</td>\n",
-       "      <td>2141-03-21 14:41:00</td>\n",
-       "      <td>0.300485</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>200063</td>\n",
-       "      <td>2141-03-21 14:41:00</td>\n",
-       "      <td>2141-03-21 15:00:00</td>\n",
-       "      <td>0.401104</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>200063</td>\n",
-       "      <td>2141-03-21 15:00:00</td>\n",
-       "      <td>2141-03-21 15:27:00</td>\n",
-       "      <td>0.301501</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>200063</td>\n",
-       "      <td>2141-03-21 15:27:00</td>\n",
-       "      <td>2141-03-21 18:27:00</td>\n",
-       "      <td>0.200936</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>200063</td>\n",
-       "      <td>2141-03-21 16:30:00</td>\n",
-       "      <td>2141-03-22 22:28:00</td>\n",
-       "      <td>0.200000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>200063</td>\n",
-       "      <td>2141-03-21 18:27:00</td>\n",
-       "      <td>2141-03-21 20:00:00</td>\n",
-       "      <td>0.201000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>200063</td>\n",
-       "      <td>2141-03-21 20:00:00</td>\n",
-       "      <td>2141-03-21 22:54:00</td>\n",
-       "      <td>0.100827</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>200063</td>\n",
-       "      <td>2141-03-21 22:54:00</td>\n",
-       "      <td>2141-03-22 00:09:00</td>\n",
-       "      <td>0.120793</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>200063</td>\n",
-       "      <td>2141-03-22 00:09:00</td>\n",
-       "      <td>2141-03-22 02:03:00</td>\n",
-       "      <td>0.080318</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   icustay_id            starttime              endtime  mcgkgmin\n",
-       "0      200063  2141-03-21 11:00:00  2141-03-21 14:14:00  0.312876\n",
-       "1      200063  2141-03-21 14:14:00  2141-03-21 14:41:00  0.300485\n",
-       "2      200063  2141-03-21 14:41:00  2141-03-21 15:00:00  0.401104\n",
-       "3      200063  2141-03-21 15:00:00  2141-03-21 15:27:00  0.301501\n",
-       "4      200063  2141-03-21 15:27:00  2141-03-21 18:27:00  0.200936\n",
-       "5      200063  2141-03-21 16:30:00  2141-03-22 22:28:00  0.200000\n",
-       "6      200063  2141-03-21 18:27:00  2141-03-21 20:00:00  0.201000\n",
-       "7      200063  2141-03-21 20:00:00  2141-03-21 22:54:00  0.100827\n",
-       "8      200063  2141-03-21 22:54:00  2141-03-22 00:09:00  0.120793\n",
-       "9      200063  2141-03-22 00:09:00  2141-03-22 02:03:00  0.080318"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print('Vasopressors (MV)')\n",
-    "pd.read_csv('final/vassopressors_mv_cohort.csv', usecols=['icustay_id', 'starttime', 'endtime', 'mcgkgmin'], nrows=10)"
+    "### Vasopressors\n",
+    "\n",
+    "For vasopressor we can do the opposite. We only have `rate` records, therefore the `starttimes` are known and we only have to infer the `endtimes` by the *next* `rate` record in the same `linkorder`:"
    ]
   },
   {
@@ -772,7 +635,6 @@
    "source": [
     "# Loading data\n",
     "vaso_cv_df = pd.read_csv('final/vassopressors_cv_cohort.csv')\n",
-    "\n",
     "vaso_cv_df['charttime'] = pd.to_datetime(vaso_cv_df['charttime'])\n",
     "\n",
     "# Sort on charttime within admission\n",
