Reran preprocessing with matching trainval sets

--- a/preprocessing/MIMIC-III_preprocessing_roggeveen_v6.ipynb
+++ b/preprocessing/MIMIC-III_preprocessing_roggeveen_v6.ipynb
@@ -3688,7 +3688,7 @@
    ],
    "source": [
     "# How many admissions do we have left?\n",
-    "len(data_final_df.icustay_id.unique())"
+    "print('Number of admissions after filtering:', len(icustay_ids))"
    ]
   },
   {
@@ -4853,7 +4853,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sort by timestep\n",
+    "# Sort by timestep and episode\n",
     "data_train_df = data_train_df.sort_values(['episode', 'timestep'])\n",
     "data_valid_df = data_valid_df.sort_values(['episode', 'timestep'])\n",
     "data_test_df = data_test_df.sort_values(['episode', 'timestep'])"
